# practice

./: .gitignore  .gitmodules
cpp_concurrent_programming/: use_thread.cpp
cuda_practice/: CMakeLists.txt
cuda_practice/cmake/: dependencies.cmake
cuda_practice/src/: check_dimension.cu
cuda_practice/src/01_vector_add/: CMakeLists.txt  vector_add.cu
cuda_practice/src/02_rgb_to_gray/: CMakeLists.txt  rgb_to_gray.cu
cuda_practice/src/03_image_blur/: CMakeLists.txt  image_blur.cu
cuda_practice/src/04_matrix_multiplication/: CMakeLists.txt  matrix_multiplication.cu  matvec_multiplication.cu
cuda_practice/src/05a_matmul/: common.hpp  main.py  main_v1.py  matmul.cpp  matmul.cu  matmul_v1.cpp  matmul_v1.cu
cuda_practice/src/0x_cuda_profiling/: CMakeLists.txt  vector_add.cu
term_project/cv_term_project/: infer.py  train.py
term_project/cv_term_project/model/: resnet_50.py
